[project]
name = "s1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.9.2",
    "pandas>=2.2.3",
    "rich>=13.9.3",
    "streamlit>=1.39.0",
]

# This section required for pushign to stremlit cloud
[tool.poetry]
name = "StreamLitPanty"
version = "0.1.2"
description = "S1Testing"
authors = ["BootyDance <buty@buty>"]  # Replace with your name and email

[tool.poetry.dependencies]
python = ">=3.12"
matplotlib = ">=3.9.2"
pandas = ">=2.2.3"
rich = ">=13.9.3"
streamlit = ">=1.39.0"